fixed some alignment errors2

--- a/pages/styles/home.css
+++ b/pages/styles/home.css
@@ -14,7 +14,9 @@ h1, h2, h3 {
 }
 
 a {
-  text-decoration: none;
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 
 /* ========== Navbar ========== */
@@ -58,7 +60,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 70%;
+  width: 100%;
   height: 100vh;
   background-color: #2ba7d8;
 }
